--- a/app/views/events/favorite.html.erb
+++ b/app/views/events/favorite.html.erb
@@ -10,7 +10,7 @@
 
 			</div>
 			<div id="header" class="col-md-6 col-sm-6 col-xs-4"><%= link_to 'Events', events_path %></div>
-			<div id="favorite_link_page" class="col-md-3 col-sm-3 col-xs-5">Favorites</div>
+			<div id="favorite_link_page" class="col-md-3 col-sm-3 col-xs-5"><span>Favorites</span></div>
 		</div>
 	</div>
 </nav>
