--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -6,7 +6,7 @@
 				<%= link_to image_tag("Icon_final.png", :class => "icon"), :action => "index", :controller => "welcome" %>
 			</div>
 
-			<div id="header" class="col-md-6 col-sm-8 col-xs-4">Events</div>
+			<div id="header" class="col-md-6 col-sm-8 col-xs-4"><span>Events</span></div>
 
 			<div id="favorite_link_events" class="col-md-4 col-sm-2 col-xs-5"><%= link_to 'Favorites',  favorite_path, :class => 'fav_events' %>
 			</div>
@@ -76,10 +76,6 @@ $(".glyphicon-star.index").click(function(){
 <script>
 	addYellowClass();
 </script>
-
-
-		
-
 
 
 
