--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -39,7 +39,6 @@
 		padding-top: 3em;
 		padding-right: 5px;
 		margin-bottom: 30px;
-
 	}
 
 	.events_link {
@@ -53,7 +52,6 @@
 
 	a.events_link:hover {
 			text-decoration: none;
-	
 	}
 
 
@@ -98,9 +96,9 @@
 			font-size: 1.5em;
 		}
 	}
-
 </style>
 
+<!--Top Bar -->
 <header>
 	<div class="container-fluid">
 		<div class="row">
@@ -119,6 +117,7 @@
 	</div>
 </header>
 
+<!-- Description -->
 <article>
 	<div class="container-fluid">
 		<div class="row">
@@ -127,7 +126,6 @@
 			</div>
 			<div class="col-md-6 col-sm-6 col-xs-12	">
 				<p id="article_text">Access the things you need to fuel your success within the Los Angeles tech/startup Ecosystem - people, events, courses, capital, jobs and more!</p>
-
 				<p id="find_events_link"><%= link_to 'Find Events', events_path, class: 'events_link' %></p>
 			</div>
 		</div>
