Remove sign in page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -102,12 +102,12 @@
 <header>
 	<div class="container-fluid" style="background-color:black;">
 		<div class="row">
-			<div class="col-xs-8 text-center">
+			<div class="col-xs-12 text-center">
 				<p id="top_bar">Prototype Launching May 2014</p>
 			</div>
-			<div class="col-xs-4 login">
-				<%= render 'layouts/login' %>
-			</div>
+<!-- 			<div class="col-xs-4 login">
+				<#%= render 'layouts/login' %>
+			</div> -->
 		</div>
 
 		<div class="row">
