--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,113 +1,13 @@
-<style type="text/css">
-	.container-fluid {
-		padding: 0px 0px
-	}
-
-	#top_bar {
-		/*background-color: black;*/
-		color: white;
-		font-size: 1em;
-		margin: 0px 0px;
-		padding: 15px 0 0 0;
-	}
-
-	#santa_monica_image {
-		background-image: url('https://launchrock-assets.s3.amazonaws.com/background-files/8EZADCXZ_1396659538110.png');
-		background-size: cover;
-		background-position: center center;
-		height: 300px;
-		width: 100%;
-	}
-
-	#logo_name {
-		color: white;
-		font-size: 3em;
-		padding-top: 100px;
-		margin: 0px;
-	}
-
-	#header_text {
-		font-size: 3em;
-		font-weight: 4000;
-		border-right: 1px solid black;
-		padding: 15px 20px 15px 10px;
-		text-align: right;
-	}
-
-	#article_text {
-		font-size: 1em;
-		padding-top: 3em;
-		padding-right: 5px;
-		margin-bottom: 30px;
-	}
-
-	.events_link {
-		font-size: 2.5em;
-		background-color: orange;
-		color: white;
-		border-radius: 10px;
-		padding: 10px;
-		font-weight: 500;
-	}
-
-	a.events_link:hover {
-			text-decoration: none;
-	}
-
-
-
-	@media only screen and (max-width: 767px) {
-		#header_text {
-			text-align: center;
-			padding-bottom: 20px;
-			border-right: none;
-		}
-
-		#article_text  {
-			text-align: center;
-			padding-top: 1em;
-			margin-left: 5px;
-			margin-right: 5px;
-		}
-
-		#find_events_link {
-			text-align: center;
-		}
-
-		#santa_monica_image {
-			background-image: url('https://launchrock-assets.s3.amazonaws.com/background-files/8EZADCXZ_1396659538110.png');
-			height: 150px;
-		}
-
-		#logo_name {
-			color: white;
-			font-size: 2em;
-			padding-top: 50px;
-			margin: 0px;
-		}
-
-		#header_text {
-			font-size: 2em;
-			margin-left: 5px;
-			margin-right: 5px;
-		}
-
-		.events_link {
-			font-size: 1.5em;
-		}
-	}
-</style>
-
 <!--Top Bar -->
 <header>
-	<div class="container-fluid" style="background-color:black;">
+	<div class="container-fluid home" style="background-color:black;">
 		<div class="row">
-			<div class="col-xs-12 text-center">
+			<div class="col-xs-8 text-center">
 				<p id="top_bar">Prototype Launching May 2014</p>
 			</div>
-<!-- 			<div class="col-xs-4 login">
-				<#%= render 'layouts/login' %>
-			</div> -->
+				<div class="col-xs-4 login">
+					<%= render 'layouts/login' %>
+				</div>
 		</div>
 
 		<div class="row">
