about to pull from master

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,6 @@
-<h2>Sign up</h2>
+<h2 class="authHeader">Sign up</h2>
 
+<div class="authsContain">
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
@@ -43,3 +44,4 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
