--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,7 +12,7 @@
 	}
 
 	#santa_monica_image {
-		background-image: url('https://launchrock-assets.s3.amazonaws.com/background-files/8EZADCXZ_1396659538110.png');
+		background-image: url('../assets/images/road.jpg');
 		background-size: cover;
 		background-position: center center;
 		height: 300px;
