--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+/*-----------------------------------------
+Sign Up/Sign In
+-----------------------------------------*/
+.authHeader {
+  text-align: center;
+}
+
+.authsContain {
+  text-align: center;
+}
