--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -54,7 +54,6 @@ $maincolor: lighten(#ccc, 40%);
 }
 
 #favorite_link_events {
-	text-align: right;
 	font-size: 2.5em;
 	padding-top: 10px;
 	font-weight: bold;
@@ -145,8 +144,7 @@ section {
 }
 
 .event_header {
-	font-size: 1em;
-	font-weight: 500;
+	font-size: 1.4em;
 }
 
 .event_description {
@@ -168,7 +166,7 @@ section {
 }
 
 .glyphicon-star.favorite{
-	color: yellow;
+	color: rgb(248, 146, 49);
 	font-size: 2em;
 	padding-right: 5px;
 	margin-left: -20px;
@@ -179,7 +177,7 @@ section {
 }
 
 .yellow {
-	color: yellow;
+	color: rgb(248, 146, 49);
 	font-size: 2em;
 }
 
