continue to style event header

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -6,6 +6,10 @@
     font-family: 'Open Sans', sans-serif;
   }
 
+  h1, h2 {
+    font-family: 'Oswald', sans-serif;
+  }
+
   .container-fluid.home {
     padding: 0px 0px
   }
