--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -40,6 +40,10 @@ $maincolor: lighten(#ccc, 40%);
 	color: white;
 	font-family: 'Oswald', sans-serif;
 
+	a {
+		color: rgb(248, 146, 49);
+	}
+
 	span {
 		/*border-bottom: 5px solid blue;*/
 	}
@@ -51,18 +55,23 @@ $maincolor: lighten(#ccc, 40%);
 }
 
 #favorite_link_page {
-	text-align: right;
+	color: white;
+	float: right;
 	font-size: 2.5em;
 	padding-top: 10px;
-	font-weight: bold;
-	float:right;
+	font-family: 'Oswald', sans-serif;
 
 	span {
 		border-bottom: 5px solid rgb(248, 146, 49);
 	}
+
+	a {
+	color: rgb(248, 146, 49);
+	}
 }
 
 #favorite_link_events {
+	color: rgb(248, 146, 49);
 	font-size: 2.5em;
 	padding-top: 10px;
 	text-align: center;
@@ -188,6 +197,7 @@ section {
 
 .glyphicon-star.index{
 	font-size: 2em;
+	cursor: pointer;
 }
 
 .yellow {
