add mailto icon and temporary media queries for survey link

--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -132,6 +132,13 @@ ul {
 	color: red;
 }
 
+// ### Mail To Icon  #####
+
+span.glyphicon.glyphicon-envelope {
+	padding-left: 10px;
+	color: rgb(248, 146, 49);
+}
+
 // ### Event Description  #####
 
 section {
