--- a/app/assets/stylesheets/mobile.css.scss
+++ b/app/assets/stylesheets/mobile.css.scss
@@ -63,6 +63,12 @@
     padding: 6px;
   }
 
+  span.glyphicon.glyphicon-envelope {
+    padding-left: 37px;
+    color: #f89231;
+    padding-top: 10px;
+  }
+
 // ######## Show Page CSS #########
   .group_photo {
     width: 100%;
@@ -74,50 +80,69 @@
 
 // ######## Home Page ####
 @media only screen and (max-width: 767px) {
-    #header_text {
-      text-align: center;
-      padding-bottom: 20px;
-      border-right: none;
-    }
+  #header_text {
+    text-align: center;
+    padding-bottom: 20px;
+    border-right: none;
+  }
 
-    #article_text  {
-      text-align: center;
-      padding-top: 1em;
-      margin-left: 5px;
-      margin-right: 5px;
-    }
+  #article_text  {
+    text-align: center;
+    padding-top: 1em;
+    margin-left: 5px;
+    margin-right: 5px;
+  }
 
-    #find_events_link {
-      text-align: center;
-    }
+  #find_events_link {
+    text-align: center;
+  }
 
-    #santa_monica_image {
-      background-image: url('https://launchrock-assets.s3.amazonaws.com/background-files/8EZADCXZ_1396659538110.png');
-      height: 150px;
-    }
+  #santa_monica_image {
+    background-image: url('https://launchrock-assets.s3.amazonaws.com/background-files/8EZADCXZ_1396659538110.png');
+    height: 150px;
+  }
 
-    #logo_name {
-      color: white;
-      font-size: 2em;
-      padding-top: 50px;
-      margin: 0px;
-    }
+  #logo_name {
+    color: white;
+    font-size: 2em;
+    padding-top: 50px;
+    margin: 0px;
+  }
 
-    #header_text {
-      font-size: 2em;
-      margin-left: 5px;
-      margin-right: 5px;
-    }
+  #header_text {
+    font-size: 2em;
+    margin-left: 5px;
+    margin-right: 5px;
+  }
 
-    .events_link {
-      font-size: 1.5em;
-    }
+  .events_link {
+    font-size: 1.5em;
+  }
 
 // ######## Events Page ####
-    .survey_link {
+  .survey_link {
     font-size: 7pt;
     margin-top: 5px;
     padding: 3px;
-    }
-
   }
+
+  span.glyphicon.glyphicon-envelope {
+    padding-left: 37px;
+    color: #f89231;
+    padding-top: 10px;
+  }
+
+
+}
+
+@media only screen and (min-width: 768px) and (max-width: 879px) {
+  .survey_link {
+    display: none;
+  }
+}
+
+@media only screen and (min-width: 556px) and (max-width: 739px) {
+  .survey_link {
+    display: none;
+  }
+}
