--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -7,6 +7,7 @@
 				<span id="survey">
 					<%= link_to 'Send Feedback', 'https://accessfuel.wufoo.com/forms/prototype-feedback-from-awesome-fuelers/', class: "survey_link", target: "_blank" %>
 				</span>
+				<span class="glyphicon glyphicon-envelope"></span>
 			</div>
 			<div id="header" class="col-md-6 col-sm-6 col-xs-6"><span>Events</span></div>
 			<div id="favorite_link_events" class="col-md-3 col-sm-3 col-xs-3"><%= link_to 'Favorites',  favorite_path, :class => 'fav_events' %></div>
