--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,22 +1,4 @@
-<!-- Fixed Header Navigation -->
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-	<div class ="container-fluid">
-		<div class="row header_row">
-			<div class="col-md-3 col-sm-3 col-xs-3">
-				<%= link_to image_tag("Icon_final.png", :class => "icon"), :action => "index", :controller => "welcome" %>
-				<span id="survey">
-					<%= link_to 'Send Feedback', 'https://accessfuel.wufoo.com/forms/prototype-feedback-from-awesome-fuelers/', class: "survey_link", target: "_blank" %>
-				</span>
-				<%= mail_to "rob@accessfuel.com" do %>
-  				<span class="glyphicon glyphicon-envelope"></span>
-				<% end %>
-			</div>
-			<div id="header" class="col-md-6 col-sm-6 col-xs-6"><span>Events</span></div>
-			<div id="favorite_link_events" class="col-md-3 col-sm-3 col-xs-3"><%= link_to 'Favorites',  favorite_path, :class => 'fav_events' %></div>
-		</div>
-	</div>
-</nav>
-<!-- End of Navigation -->
+<%= render 'events/nav_bar' %>
 
 <!-- Events Listing Container-->
 <div class="container-fluid content">
@@ -30,10 +12,11 @@
 		</div>
 	</div>
 </div>
-<!-- End of Event Listing container -->
 <div id="filtered_events">
 	<%= render "events/events" %>
 </div>
+
+<!-- End of Event Listing container -->
 
 <!-- Favorite Function -->
 <script>
