about to pull changes from andy

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -157,7 +157,7 @@
 							</div>
 	          </div>
 	          <div class="item carousel-fade">
-	            <div id="santa_monica_image">
+	            <div id="geom_image">
 								<%=image_tag("Logo_final.png", class: "welcome_logo")%>
 							</div>
 	          </div>
