Update User Settings

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -20,6 +20,12 @@
     
     <%= check_box_tag "Trade Shows", :interest %> 
     <%= label_tag "Trade Shows" %><br>
+
+    <%= check_box_tag "Codeathons and Hackathons", :interest %> 
+    <%= label_tag "Codeathons and Hackathons"%><br>
+
+    <%= check_box_tag "Courses", :interest %> 
+    <%= label_tag "Courses"%><br>
 <!--     
     <%= check_box_tag "Job Fair", :interest %> 
     <%= label_tag "Job Fair"%><br>
