--- a/app/views/events/_nav_bar.html.erb
+++ b/app/views/events/_nav_bar.html.erb
@@ -29,11 +29,10 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Signed In</a></li>
-        <li><a href="#">Settings</a></li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
+
+        <%= render 'layouts/login' %>
+
+      </div><!-- /.navbar-collapse -->
     </div>
   </div><!-- /.container-fluid -->
 </nav>
