--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2>Edit <%= resource_name.to_s.humanize %> Settings</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
@@ -17,7 +17,36 @@
     <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
 
   <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %></div>
+    <%= f.password_field :current_password, autocomplete: "off" %></div><br>
+
+  <div><strong><%= f.label :interest %></strong><br />
+    
+    <%= check_box_tag "Conferences", :interest %> 
+    <%= label_tag "Conferences"%><br>
+    
+    <%= check_box_tag "Trade Shows", :interest %> 
+    <%= label_tag "Trade Shows" %><br>
+
+    <%= check_box_tag "Codeathons and Hackathons", :interest %> 
+    <%= label_tag "Codeathons and Hackathons"%><br>
+
+    <%= check_box_tag "Courses", :interest %> 
+    <%= label_tag "Courses"%><br>
+  <!--     
+    <%= check_box_tag "Job Fair", :interest %> 
+    <%= label_tag "Job Fair"%><br>
+
+    <%= check_box_tag "Charity Events & Fundraisers", :interest %> 
+    <%= label_tag "Charity Events & Fundraisers"%><br>
+
+
+
+    <%= check_box_tag "Classes", :interest %> 
+    <%= label_tag "Classes"%><br>
+
+    <%= check_box_tag "Online", :interest %> 
+    <%= label_tag "Online"%><br> -->
+  </div>
 
   <div><%= f.submit "Update" %></div>
 <% end %>
@@ -25,5 +54,7 @@
 <h3>Cancel my account</h3>
 
 <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+
+
 
 <%= link_to "Back", :back %>
